@@ -955,6 +955,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hbase
+operator|.
+name|util
+operator|.
+name|Classes
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|io
 operator|.
 name|MapWritable
@@ -2529,12 +2545,23 @@ argument_list|,
 name|declClass
 argument_list|)
 expr_stmt|;
+comment|// used to just be arrays. Now check for ones for which there's a
+comment|// class code, and let the others get scooped up by serializable.
 if|if
 condition|(
 name|declClass
 operator|.
 name|isArray
 argument_list|()
+operator|&&
+name|CLASS_TO_CODE
+operator|.
+name|get
+argument_list|(
+name|declClass
+argument_list|)
+operator|!=
+literal|null
 condition|)
 block|{
 comment|// array
@@ -3188,6 +3215,71 @@ name|c
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|declClass
+operator|.
+name|isArray
+argument_list|()
+condition|)
+block|{
+name|int
+name|length
+init|=
+name|Array
+operator|.
+name|getLength
+argument_list|(
+name|instanceObj
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|writeInt
+argument_list|(
+name|length
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|writeObject
+argument_list|(
+name|out
+argument_list|,
+name|Array
+operator|.
+name|get
+argument_list|(
+name|instanceObj
+argument_list|,
+name|i
+argument_list|)
+argument_list|,
+name|declClass
+operator|.
+name|getComponentType
+argument_list|()
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
 name|ByteArrayOutputStream
 name|bos
 init|=
@@ -3271,6 +3363,7 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 block|}
 else|else
@@ -4004,6 +4097,73 @@ block|}
 block|}
 else|else
 block|{
+if|if
+condition|(
+name|instanceClass
+operator|.
+name|isArray
+argument_list|()
+condition|)
+block|{
+name|int
+name|length
+init|=
+name|in
+operator|.
+name|readInt
+argument_list|()
+decl_stmt|;
+name|instance
+operator|=
+name|Array
+operator|.
+name|newInstance
+argument_list|(
+name|instanceClass
+operator|.
+name|getComponentType
+argument_list|()
+argument_list|,
+name|length
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Array
+operator|.
+name|set
+argument_list|(
+name|instance
+argument_list|,
+name|i
+argument_list|,
+name|HbaseObjectWritable
+operator|.
+name|readObject
+argument_list|(
+name|in
+argument_list|,
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
 name|int
 name|length
 init|=
@@ -4114,6 +4274,7 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
