@@ -43,6 +43,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -843,6 +853,104 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testCustomWritableArray
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+comment|// test proper serialization of un-encoded custom writables
+name|CustomWritable
+name|custom1
+init|=
+operator|new
+name|CustomWritable
+argument_list|(
+literal|"test phrase"
+argument_list|)
+decl_stmt|;
+name|CustomWritable
+name|custom2
+init|=
+operator|new
+name|CustomWritable
+argument_list|(
+literal|"test phrase2"
+argument_list|)
+decl_stmt|;
+name|CustomWritable
+index|[]
+name|customs
+init|=
+block|{
+name|custom1
+block|,
+name|custom2
+block|}
+decl_stmt|;
+name|Object
+name|obj
+init|=
+name|doType
+argument_list|(
+name|conf
+argument_list|,
+name|customs
+argument_list|,
+name|CustomWritable
+index|[]
+operator|.
+expr|class
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Arrays should match "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|customs
+argument_list|)
+operator|+
+literal|", "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+operator|(
+name|Object
+index|[]
+operator|)
+name|obj
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|equals
+argument_list|(
+name|customs
+argument_list|,
+operator|(
+name|Object
+index|[]
+operator|)
+name|obj
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testCustomSerializable
 parameter_list|()
 throws|throws
@@ -907,6 +1015,104 @@ operator|)
 operator|.
 name|getValue
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testCustomSerializableArray
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+comment|// test proper serialization of un-encoded serialized java objects
+name|CustomSerializable
+name|custom1
+init|=
+operator|new
+name|CustomSerializable
+argument_list|(
+literal|"test phrase"
+argument_list|)
+decl_stmt|;
+name|CustomSerializable
+name|custom2
+init|=
+operator|new
+name|CustomSerializable
+argument_list|(
+literal|"test phrase2"
+argument_list|)
+decl_stmt|;
+name|CustomSerializable
+index|[]
+name|custom
+init|=
+block|{
+name|custom1
+block|,
+name|custom2
+block|}
+decl_stmt|;
+name|Object
+name|obj
+init|=
+name|doType
+argument_list|(
+name|conf
+argument_list|,
+name|custom
+argument_list|,
+name|CustomSerializable
+index|[]
+operator|.
+expr|class
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Arrays should match "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|custom
+argument_list|)
+operator|+
+literal|", "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+operator|(
+name|Object
+index|[]
+operator|)
+name|obj
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|equals
+argument_list|(
+name|custom
+argument_list|,
+operator|(
+name|Object
+index|[]
+operator|)
+name|obj
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1021,7 +1227,7 @@ specifier|final
 name|long
 name|serialVersionUID
 init|=
-literal|1048445561865740632L
+literal|1048445561865740633L
 decl_stmt|;
 specifier|private
 name|String
@@ -1070,6 +1276,67 @@ name|value
 operator|=
 name|value
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+return|return
+operator|(
+name|obj
+operator|instanceof
+name|CustomSerializable
+operator|)
+operator|&&
+operator|(
+operator|(
+name|CustomSerializable
+operator|)
+name|obj
+operator|)
+operator|.
+name|value
+operator|.
+name|equals
+argument_list|(
+name|value
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|value
+operator|.
+name|hashCode
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"<"
+operator|+
+name|value
+operator|+
+literal|">"
+return|;
 block|}
 block|}
 specifier|public
@@ -1159,6 +1426,67 @@ argument_list|(
 name|in
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+return|return
+operator|(
+name|obj
+operator|instanceof
+name|CustomWritable
+operator|)
+operator|&&
+operator|(
+operator|(
+name|CustomWritable
+operator|)
+name|obj
+operator|)
+operator|.
+name|value
+operator|.
+name|equals
+argument_list|(
+name|value
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|value
+operator|.
+name|hashCode
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"<"
+operator|+
+name|value
+operator|+
+literal|">"
+return|;
 block|}
 block|}
 specifier|public
