@@ -46,6 +46,8 @@ Release 0.91.0 - Unreleased
                (Jesse Yates via Stack)
    HBASE-3393  Update Avro gateway to use Avro 1.4.1 and the new
                server.join() method (Jeff Hammerbacher via Stack)
+   HBASE-3429  HBaseObjectWritable should support arrays of any Writable
+               or Serializable, not just Writable[] (Ed Kohlwey via Stack)
 
 
   NEW FEATURES
